--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,56 @@
-$bgcolor: rgb(0, 255, 247);
+@use './hero';
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+$cordeFundo: #040714;
+$corTextoPrincipal: silver;
+$corTextoSecundaria: #f9f9f9;
 
 body {
-    background-color: $bgcolor;
+    background-color: $cordeFundo;
+}
+
+@mixin text($fontSize: 16px) {
+    font-size: $fontSize;
+    line-height: $fontSize + 10px;
+    color: $corTextoPrincipal;
+}
+
+@mixin title($fontSize:40px) {
+    @include text($fontSize);
+    color: $corTextoSecundaria;
+}
+
+.text--big {
+    @include text(18px);
+}
+
+.text {
+    @include text;
+}
+
+.link-text {
+    @include text(18px);
+    color: $corTextoSecundaria;
+    text-decoration: underline;
+}
+
+.text--small {
+    @include text(12px);
+}
+
+.title--big {
+    @include title(44px);
+}
+
+.title {
+    @include title();
+}
+
+.title--small {
+    @include title(28px);
 }
