--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,10 +1,16 @@
+@use 'variaveis';
+
 .hero {
     padding: 5.6vw;
     min-width: 80vh;
     background-image: url(../images/hero_desktop.jpeg);
     text-align: center;
+    background-size: cover; // Ajusta a imagem para cobrir toda a área
+    background-position: center; // Centraliza a imagem
+    background-repeat: no-repeat; // Impede a repetição da imagem
+    
 
-    &__hero {
+    &__content {
         max-width: 640px;
 
         &__branding {
@@ -18,6 +24,25 @@
 
         p {
             margin-bottom: 20px;
+
+            &:last-child {
+                margin-top: 60px;
+            }
+        }
+
+        &__combos {
+            display: flex;
+            justify-content: space-between;
+
+            &__combo {
+                width: calc(50% - 12px);
+                
+
+                img {
+                    max-height: 60px;
+                }
+
+            }
         }
     }
 }
