--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,28 +1,28 @@
-@use './hero';
+@use 'variaveis';
+@use 'hero';
+@use 'shows';
+@use 'plans';
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
-$cordeFundo: #040714;
-$corTextoPrincipal: silver;
-$corTextoSecundaria: #f9f9f9;
-
 body {
-    background-color: $cordeFundo;
+    background-color: variaveis.$cordeFundo;
 }
 
 @mixin text($fontSize: 16px) {
     font-size: $fontSize;
     line-height: $fontSize + 10px;
-    color: $corTextoPrincipal;
+    color: variaveis.$corTextoPrincipal;
 }
 
 @mixin title($fontSize:40px) {
     @include text($fontSize);
-    color: $corTextoSecundaria;
+    color: variaveis.$corTextoSecundaria;
 }
 
 .text--big {
@@ -35,7 +35,7 @@ body {
 
 .link-text {
     @include text(18px);
-    color: $corTextoSecundaria;
+    color: variaveis.$corTextoSecundaria;
     text-decoration: underline;
 }
 
@@ -53,4 +53,18 @@ body {
 
 .title--small {
     @include title(28px);
+}
+
+.button {
+        display: block;
+        width: 100%;
+        height: 60px;
+        font-size: 18px;
+        color: variaveis.$corTextoSecundaria;
+        background-color: #6421ff;
+        text-transform: uppercase;
+        border: none;
+        border-radius: 4px;
+        margin-top: 2vw;
+        margin-bottom: 8px;
 }
