--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -2,20 +2,41 @@
 
 .hero {
     padding: 5.6vw;
-    min-width: 80vh;
+    min-height: 80vh;
     background-image: url(../images/hero_desktop.jpeg);
     text-align: center;
     background-size: cover; // Ajusta a imagem para cobrir toda a área
-    background-position: center; // Centraliza a imagem
-    background-repeat: no-repeat; // Impede a repetição da imagem
+
+    @media (max-width: 768px) {
+        background-image: url(../images/hero_celular.jpeg);
+        padding-top: calc(50vw + 25px);
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin-top: -55px;
+    }
+
+    .button {
+        margin-top: 2vw;
+        margin-bottom: 8px;
+    }
+    
     
 
     &__content {
         max-width: 640px;
 
+
+        @media (max-width:768px) {
+            left: 0;   
+        }
+
         &__branding {
             max-width: 320px;
             margin: 0 auto 38px;
+
+            @media (max-width: 768px) {
+                max-width: 180px; 
+            }
         }
 
         .title--small {
@@ -34,14 +55,22 @@
             display: flex;
             justify-content: space-between;
 
+            @media (max-width: 768px) {
+                display: block;
+            }
+
             &__combo {
                 width: calc(50% - 12px);
+
+                @media (max-width: 768px) {
+                    width: 100%;
+                    margin-bottom: 24px;
+                }
                 
 
                 img {
                     max-height: 60px;
                 }
-
             }
         }
     }
