--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,6 @@
 $cordeFundo: #040714;
 $corTextoPrincipal: silver;
 $corTextoSecundaria: #f9f9f9;
+$cordeFundoBotaoPrimario: #6421ff  ;
+$cordeFundoBotaoSecundario: #0063e5 ;
+$cordeFundoBotaoDark: #000;
