--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,12 +2,17 @@
 @use 'hero';
 @use 'shows';
 @use 'plans';
+@use 'available-devices';
+@use 'faq';
+@use 'footer';
+@use 'header';
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+    list-style: none;
 }
 
 body {
@@ -27,10 +32,18 @@ body {
 
 .text--big {
     @include text(18px);
+
+    @media (max-width: 768px) {
+        @include text(15px);
+    }
 }
 
 .text {
     @include text;
+
+    @media (max-width: 768px) {
+        @include text(14px);
+    }
 }
 
 .link-text {
@@ -41,30 +54,122 @@ body {
 
 .text--small {
     @include text(12px);
+
+    @media (max-width: 768px) {
+        @include text(11px);
+    }
 }
 
 .title--big {
     @include title(44px);
+
+    @media (max-width: 768px) {
+        @include title(26px);
+    }
 }
 
 .title {
     @include title();
+
+    @media (max-width: 768px) {
+        @include title(24px);
+    }
 }
 
 .title--small {
     @include title(28px);
+
+    @media (max-width: 768px) {
+        @include title(22px);
+    }
 }
 
 .button {
-        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 100%;
         height: 60px;
         font-size: 18px;
         color: variaveis.$corTextoSecundaria;
-        background-color: #6421ff;
+        background-color: variaveis.$cordeFundoBotaoPrimario;
         text-transform: uppercase;
         border: none;
         border-radius: 4px;
-        margin-top: 2vw;
-        margin-bottom: 8px;
+        text-decoration: none;
+        padding: 8px 14px;
+        letter-spacing: 1px;
+        border: 1px solid  variaveis.$cordeFundoBotaoPrimario;
+
+        &:hover {
+            background-color:  rgb(110.6824324324, 48.3, 255);
+        }
+
+        &--secondary {
+            background-color: variaveis.$cordeFundoBotaoSecundario;
+            border-color: variaveis.$cordeFundoBotaoSecundario;
+
+            &:hover {
+                background-color: rgb(0, 105.6144104803, 244.3);
+            }
+        }
+
+        &--dark {
+            background-color: rgba(variaveis.$cordeFundoBotaoDark, 0.8);
+            border-color: variaveis.$corTextoSecundaria;
+
+            &:hover {
+                background-color: variaveis.$corTextoSecundaria;
+                color: variaveis.$cordeFundo;
+            }
+        }
+}
+
+.image-text-section {
+    padding: 5.6vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+
+    @media (max-width: 768px) {
+        display: block ;
+    }
+
+    img {
+        max-width: 100%;
+    }
+
+    &__text_container {
+        padding: 0 2vw;
+
+        h2 {
+            margin-bottom: 24px;
+        }
+    }
+
+    &--image-full-width {
+        display: block;
+        position: relative;
+
+        img {
+            width: 100%;
+        }
+
+        &__text_container {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            height: 100%;
+            width: calc(50% - 5.6vw);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            @media (max-width: 768px) {
+                position: relative;
+                left: 0;
+                width: 100%;
+            }
+        }
+    }
 }
